# property-monitor

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Document.md  LICENSE  Makefile  README.md  admin_service.py  cli_tools.py  config.json  config.json.example  config.py  database.py  docker-compose.yml  geocoding_service.py  install.sh  main_service.py  models.py  monitor.py  monitor.sh  property_scraper_service.py  pyproject.toml  requirements.txt  template_utils.py  web_service.py
geocoding_data/: README.md  city_corrections.json  common_prefixes.json  diacritic_mapping.json
